# diane

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
Diane Design System/: .thumbnail  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md
Diane Design System/components/core/: Badge.d.ts  Badge.jsx  Badge.prompt.md  Button.d.ts  Button.jsx  Button.prompt.md  Card.d.ts  Card.jsx  Card.prompt.md  core.card.html
Diane Design System/components/forms/: RadioCards.d.ts  RadioCards.jsx  RadioCards.prompt.md  (+13 more)
Diane Design System/guidelines/: brand-mark.card.html  brand-wordmark.card.html  colors-ansi.card.html  colors-brand.card.html  colors-stage.card.html  colors-surfaces.card.html  colors-text.card.html  spacing-radii.card.html  spacing-scale.card.html  spacing-shadows.card.html  type-data.card.html  type-families.card.html  type-scale.card.html
Diane Design System/tokens/: colors.css  fonts.css  spacing.css
config/: pipeline.yaml
scripts/: benchmark_translate.py  diane-desktop.sh  download_models.sh  install_desktop.sh  make_fixture.sh
tests/: test_align_timing_helpers.py  test_compose.py  test_pipeline.py  test_runner.py  test_sentence_merge.py  test_synthesize.py  test_translate.py  test_ui.py  test_vram.py  test_vram_guard.py
videodub/: __main__.py
videodub/core/: cache.py  logger.py  orchestrator.py  runner.py  vram.py
videodub/schemas/: segment.py  translation.py
videodub/services/: health.py  llamacpp_server.py
videodub/stages/: _dummy_gpu.py  align_timing.py  compose.py  extract_audio.py  separate_vocals.py  synthesize.py  transcribe.py  translate.py
videodub/ui/: server.py
(+23 files in other folders)
