[project]
name = "videodub"
version = "1.0.0"
description = "Diane — pipeline local de doblaje EN→ES con subprocess-per-stage"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "rich>=13.7",
    "pydantic>=2.6",
    "psutil>=5.9",
    "pyyaml>=6.0",
    "typer>=0.12",
    "nvidia-ml-py>=12.535",
    "gemini-srt-translator>=3.5.1",
    "requests>=2.34.2",
]

[project.scripts]
videodub = "videodub.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["videodub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
